made some sizing changes
changed some widths of the columns

--- a/assets/compass/sass/style.scss
+++ b/assets/compass/sass/style.scss
@@ -81,6 +81,18 @@ body{
 		
 		text-align: center;
 	}
+	#img-descript1{
+		padding-left: 15%;
+		padding-right: 7.5%;
+	} 
+	#img-descript2{
+		padding: 0% 7.5% 0% 7.5%;
+
+	}
+	#img-descript3{
+		padding-right: 15%;
+		padding-left: 7.5%;
+	}
 }
 
 .container.D{
